// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`displays the Git ignore warning when changed npmrc files are ignored 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◆  How should users install packages with automatic authentication?
│  ● Standard npm install (npm i — requires npm 12 or later)
│  ○ Custom npm script
│  ↑/↓ to navigate • Enter: confirm
└
◇  How should users install packages with automatic authentication?
│  Standard npm install
│
◆  Registry URL for package.json
│  https://registry.example.com/
└
│  h█│  ht█│  htt█│  http█│  https█│  https:█│  https:/█│  https://█│  https://r█│  https://re█│  https://reg█│  https://regi█│  https://regis█│  https://regist█│  https://registr█│  https://registry█│  https://registry.█│  https://registry.e█│  https://registry.ex█│  https://registry.exa█│  https://registry.exam█│  https://registry.examp█│  https://registry.exampl█│  https://registry.example█│  https://registry.example.█│  https://registry.example.t█│  https://registry.example.te█│  https://registry.example.tes█│  https://registry.example.test█│  https://registry.example.test/█◇  Registry URL for package.json
│  https://registry.example.test/
│
◇  Configuration files are ready.
│
◆  Changed 2 files in 1 package
│
│  ./
│    UPDATED    package.json
│    CREATED    .npmrc
│
▲  The following .npmrc files were created or updated but are ignored by Git.
│  Project-level .npmrc files are often committed so npm settings are shared with other contributors.
│  Review each file for credentials or other secrets, then remove the relevant .gitignore rules and commit and push any files that are safe to share:
│
│  - .npmrc
│
◇  Next step ───────────────────────────────────────────────────╮
│                                                               │
│  Install packages with authentication handled automatically:  │
│                                                               │
│  npm install                                                  │
│                                                               │
│  This requires npm 12 or later.                               │
│                                                               │
├───────────────────────────────────────────────────────────────╯
│
└  Authentication configuration complete. 😊

"
`;

exports[`does not display the Git ignore warning when no changed npmrc files are ignored 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◆  How should users install packages with automatic authentication?
│  ● Standard npm install (npm i — requires npm 12 or later)
│  ○ Custom npm script
│  ↑/↓ to navigate • Enter: confirm
└
◇  How should users install packages with automatic authentication?
│  Standard npm install
│
◆  Registry URL for package.json
│  https://registry.example.com/
└
│  h█│  ht█│  htt█│  http█│  https█│  https:█│  https:/█│  https://█│  https://r█│  https://re█│  https://reg█│  https://regi█│  https://regis█│  https://regist█│  https://registr█│  https://registry█│  https://registry.█│  https://registry.e█│  https://registry.ex█│  https://registry.exa█│  https://registry.exam█│  https://registry.examp█│  https://registry.exampl█│  https://registry.example█│  https://registry.example.█│  https://registry.example.t█│  https://registry.example.te█│  https://registry.example.tes█│  https://registry.example.test█│  https://registry.example.test/█◇  Registry URL for package.json
│  https://registry.example.test/
│
◇  Configuration files are ready.
│
◆  Changed 2 files in 1 package
│
│  ./
│    UPDATED    package.json
│    CREATED    .npmrc
│
◇  Next step ───────────────────────────────────────────────────╮
│                                                               │
│  Install packages with authentication handled automatically:  │
│                                                               │
│  npm install                                                  │
│                                                               │
│  This requires npm 12 or later.                               │
│                                                               │
├───────────────────────────────────────────────────────────────╯
│
└  Authentication configuration complete. 😊

"
`;
